--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -16,8 +16,19 @@ img {
   max-width: 1200px;
 }
 
-.heading {
+a {
+  color: gray;
+}
+
+.heading,
+.timer {
   display: inline-block;
+  line-height: 1;
+  margin: 0 15px 0 0;
+}
+
+.timer {
+  color: red;
 }
 
 .back-home {
@@ -104,7 +115,7 @@ img {
   vertical-align: middle;
   font-size: 1.3em;
   background: rgba(255,255,255,0.8);
-  padding-top: 30%;
+  padding-top: 2rem;
   
   #play-again {
     cursor: pointer;
@@ -138,3 +149,24 @@ img {
   vertical-align: middle;
   margin-right: 10px;
 }
+
+.new-score {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  vertical-align: middle;
+  font-size: 1.3em;
+  background: rgba(255,255,255,0.8);
+  padding-top: 30%;
+  
+  input[type="submit"] {
+    cursor: pointer;
+  }
+}
+
