--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -1,4 +1,5 @@
-<h1 class="heading">Where's Waldo</h1>
+<h1 class="heading"><a href="/">Where's Waldo</a></h1>
+<p class="timer" id="timer"></p>
 <a class="back-home" href="/">Back to Start</a>
 
 <%= image_tag(@source, id: "photo", 'data-id' => @photo.id) %>
