Add header container for photo page

--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -1,6 +1,9 @@
-<h1 class="heading"><a href="/">Where's Waldo</a></h1>
-<p class="timer" id="timer"></p>
-<a class="back-home" href="/">Back to Start</a>
+<div class="header">
+  <h1 class="heading"><a href="/">Where's Waldo</a></h1>
+  <p class="timer" id="timer"></p>
+  <a class="back-home" href="/">Back to Start</a>
+</div>
+
 
 <%= image_tag(@source, id: "photo", 'data-id' => @photo.id) %>
 
